SP Screen ResDev (Partial)/src/objects/WorkOrder.object
<CustomObject>
    <fields>
        <fullName>Account_Area__c</fullName>
        <formula>TEXT(Account.Area__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Measure_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Measure Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_Measurer__c</fullName>
        <description>Who conducted CM</description>
        <label>Check Measurer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Collect_required_paperwork__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collect required paperwork</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirmed_all_measurements_specs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed all measurements &amp; specs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile_Phone__c</fullName>
        <formula>Opportunity__r.Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact.FirstName  &amp;  Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_onsite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer confirmed they will be onsite for appointment</description>
        <inlineHelpText>Customer confirmed they will be onsite for appointment</inlineHelpText>
        <label>Customer onsite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diamond_Grille__c</fullName>
        <description>Estimate number of Diamond Grille screens</description>
        <inlineHelpText>Estimate number of Diamond Grille screens</inlineHelpText>
        <label>Diamond Grille</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Prevent_Geocoding_For_Chatter_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent Geocoding For Chatter Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Scheduling_Priority__c</fullName>
        <formula>CASE(TEXT(Priority), &apos;Critical&apos; , 1 ,&apos;High&apos; ,2,&apos;Medium&apos; ,3 , &apos;Low&apos;, 4, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduling Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__VisitingHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visiting Hours</label>
        <referenceTo>OperatingHours</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flyscreen_Retractable__c</fullName>
        <description>Estimate number of retractable flyscreens</description>
        <inlineHelpText>Estimate number of retractable flyscreens</inlineHelpText>
        <label>Flyscreen Retractable</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flyscreen_Window_or_Door__c</fullName>
        <inlineHelpText>Estimate number of Flyscreen windows or Doors</inlineHelpText>
        <label>Flyscreen Window or Doors</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Important_Notes__c</fullName>
        <label>Important Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Install_time_hours__c</fullName>
        <description>Please add how many hours that need to be booked for the install</description>
        <inlineHelpText>Please add how many hours that need to be booked for the install</inlineHelpText>
        <label>Install time (hours)</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_in_factory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key in-factory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_on_site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key on-site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ladder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ladder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Invoice_Received_Factory_Use_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Invoice Received (Factory Use Only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Powdercoating_Sent_Date__c</fullName>
        <label>Powdercoating Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Powdercoating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Powdercoating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Products_Ordered__c</fullName>
        <formula>IF(INCLUDES(Opportunity__r.Products_Ordered__c , &apos;Aluminium Fence&apos;), &apos;Aluminium Fence, &apos;, NULL) +
IF(INCLUDES(Opportunity__r.Products_Ordered__c , &apos;Aluminium Gate&apos;), &apos;Aluminium Gate,&apos; , NULL) +
IF(INCLUDES(Opportunity__r.Products_Ordered__c , &apos;Aluminium Panel&apos;), &apos;Aluminium Panel, &apos;, NULL) +
IF(INCLUDES(Opportunity__r.Products_Ordered__c , &apos;Diamond Grille Door&apos;), &apos;Diamond Grille Door, &apos;, NULL) +
IF(INCLUDES(Opportunity__r.Products_Ordered__c , &apos;Diamond Grille Window&apos;), &apos;Diamond Grille Window,&apos; , NULL) +
IF(INCLUDES(Opportunity__r.Products_Ordered__c , &apos;Fire Escape&apos;), &apos;Fire Escape,&apos; , NULL) +
IF(INCLUDES(Opportunity__r.Products_Ordered__c , &apos;Flyscreen Door&apos;), &apos;Flyscreen Door,&apos; , NULL) +
IF(INCLUDES(Opportunity__r.Products_Ordered__c , &apos;Flyscreen Window&apos;), &apos;Flyscreen Window, &apos;, NULL) +
IF(INCLUDES(Opportunity__r.Products_Ordered__c , &apos;Pet Door&apos;), &apos;Pet Door, &apos;, NULL) +
IF(INCLUDES(Opportunity__r.Products_Ordered__c , &apos;Pleated Retractable Screen&apos;),&apos;Pleated Retractable Screen, &apos;, NULL) +
IF(INCLUDES(Opportunity__r.Products_Ordered__c , &apos;Retractable Roll-Away Screen&apos;), &apos;Retractable Roll-Away Screen, &apos;, NULL) +
IF(INCLUDES(Opportunity__r.Products_Ordered__c , &apos;SecureView hinged door&apos;), &apos;SecureView hinged door, &apos;, NULL) +
IF(INCLUDES(Opportunity__r.Products_Ordered__c , &apos;SecureView Sliding door&apos;), &apos;SecureView Sliding door, &apos;, NULL) +
IF(INCLUDES(Opportunity__r.Products_Ordered__c , &apos;SecureView window&apos;), &apos;SecureView window, &apos;, NULL) +
IF(INCLUDES(Opportunity__r.Products_Ordered__c , &apos;Steel Door&apos;), &apos;Steel Door,&apos; , NULL) +
IF(INCLUDES(Opportunity__r.Products_Ordered__c , &apos;Steel Window&apos;), &apos;Steel Window,&apos; , NULL) +
IF(INCLUDES(Opportunity__r.Products_Ordered__c , &apos;Xceed hinged door&apos;), &apos;Xceed hinged door,&apos; , NULL) +
IF(INCLUDES(Opportunity__r.Products_Ordered__c , &apos;Xceed Sliding door&apos;), &apos;Xceed Sliding door ,&apos; , NULL) +
IF(INCLUDES(Opportunity__r.Products_Ordered__c , &apos;Xceed Window&apos;),&apos;Xceed Window,&apos; , NULL)</formula>
        <label>Products Ordered</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Project_Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ROCKFORD_Notes__c</fullName>
        <label>ROCKFORD Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Return_Paperwork_to_factory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return Paperwork to factory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SUPPLY_ONLY_edit_APlan_as_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SUPPLY ONLY (edit APlan as required)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Security_Doors__c</fullName>
        <description>Number of Security Doors to be quoted</description>
        <inlineHelpText>Number of Security Doors to be quoted as advised by customer</inlineHelpText>
        <label>Security Doors</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Security_Screens__c</fullName>
        <description>Estimate number of security screens</description>
        <inlineHelpText>Estimate number of security screens</inlineHelpText>
        <label>Security Screens</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Side_rack_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Side rack required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Steel_Door_Windows__c</fullName>
        <description>Estimate number of Steel Doors or Windows</description>
        <inlineHelpText>Estimate number of Steel Doors or Windows</inlineHelpText>
        <label>Steel Door/Windows</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suburb__c</fullName>
        <formula>Opportunity__r.Contact__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suburb</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Order_Number_RF_CMDX_CWS_ACE__c</fullName>
        <description>Please put supplier initials and PO #</description>
        <inlineHelpText>Please put supplier initials and PO #</inlineHelpText>
        <label>Supplier Order Number (RF/CMDX/CWS/ACE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Take_photo_and_upload_CM_sheet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Take photo and upload CM sheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Installers__c</fullName>
        <label># of Installers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>Mandy_To_Do</fullName>
        <columns>Name</columns>
        <columns>Subject</columns>
        <columns>Account</columns>
        <columns>Status</columns>
        <columns>Account_Area__c</columns>
        <columns>Suburb__c</columns>
        <columns>Important_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ServiceTerritory</field>
            <operation>equals</operation>
            <value>Sydney Region</value>
        </filters>
        <filters>
            <field>Status</field>
            <operation>contains</operation>
            <value>New</value>
        </filters>
        <label>Mandy To Do</label>
    </listViews>
    <listViews>
        <fullName>My_WorkOrders</fullName>
        <filterScope>Mine</filterScope>
        <label>My Work Orders</label>
    </listViews>
    <listViews>
        <fullName>Office_Manager_List</fullName>
        <columns>CreatedDate</columns>
        <columns>ServiceTerritory</columns>
        <columns>WorkType</columns>
        <columns>Name</columns>
        <columns>Subject</columns>
        <columns>Contact</columns>
        <columns>Suburb__c</columns>
        <columns>Status</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>New,Scheduled,Assigned,Complete - Pending</value>
        </filters>
        <label>Office Manager List</label>
    </listViews>
    <recordTypes>
        <fullName>Check_Measure</fullName>
        <active>true</active>
        <description>Check Measure Work Order</description>
        <label>Check Measure</label>
    </recordTypes>
    <recordTypes>
        <fullName>Free_Consultation</fullName>
        <active>true</active>
        <description>Free Consultation appointment</description>
        <label>Free Consultation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Standard Work Order</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>